--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,6 +8,11 @@
   background-color: inherit;
 }
 
+#logo,
+.navbar-brand {
+  height: 100%;
+}
+
 .nav-link {
   color: var(--text);
   font-family: mainFont;
@@ -15,11 +20,15 @@
 
 .navbar .container {
   background-color: inherit;
+  height: 100%;
+  position: relative;
 }
 
 #mynavbar {
   background-color: var(--background) !important;
   z-index: 1000;
+  height: 80px;
+  position: relative;
 }
 
 @media (min-width: 768px) {
