--- a/src/components/contactform.css
+++ b/src/components/contactform.css
@@ -1,31 +1,45 @@
 /* ContactForm.css */
 section#contact {
-  padding: 2rem;
+  padding: 1rem;
   background-color: var(--background);
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 10;
+  flex-basis: 0;
+  max-width: 500px;
 }
 
-h2 {
+#formTitle {
   margin-bottom: 1.5rem;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  max-width: 500px;
-  margin: 0 auto;
   gap: 1rem;
 }
 
 input,
 textarea {
   width: 100%;
-  padding: 0.75rem 0.75rem 0.75rem 2.5rem; /* space for icon */
-  border: 1px solid #ccc;
+  padding: 0.75rem; /* space for icon */
+  border: 1px solid var(--secondary);
   border-radius: 8px;
-  font-size: 1rem;
   text-align: right; /* Hebrew text right-aligned */
   transition: all 0.5s;
+  padding: 8px;
+}
+
+.input-wrapper textarea {
+  resize: none; /* prevent manual resize */
+  overflow: hidden; /* hide scrollbars */
+  min-height: 3em; /* initial height */
+  height: auto; /* let CSS manage height */
+}
+
+.input-wrapper {
+  width: 100%;
 }
 
 input:focus,
@@ -38,13 +52,11 @@ textarea:focus {
 
 textarea {
   resize: vertical;
-  min-height: 120px;
 }
 
 button {
   padding: 0.75rem;
   background-color: var(--accent);
-  font-size: 1rem;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -71,8 +83,9 @@ button:hover {
   color: rgb(128, 0, 0);
 }
 
-@media (max-width: 600px) {
-  form {
-    width: 90%;
+@media (max-width: 768px) {
+  section#contact {
+    order: 1;
+    max-width: unset;
   }
 }
