mobile fixes, svg import installed

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 :root {
   --text: #1d1d1d;
-  --background: #fbfbfe;
+  --background: #ffffff;
   --secondary: #e1e1e1;
   --accentLight: #d9f3d5;
-  --primaryDark: #0b619e;
+  --primaryDark: #463333;
   --accent: #baebb3;
   --accentDark: #93da93;
   --accentDarkest: #15731d;
