--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,10 @@ body {
   transition: background-position 0.25s cubic-bezier(0.24, 0, 0.73, 0.33);
 }
 
+.clickable.hover,
+.clickable.active {
+  font-weight: 700;
+}
 /*scrollbar*/
 /* width */
 ::-webkit-scrollbar {
