--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@ body {
   -webkit-mask-position: center;
   top: 0;
   left: 0;
-  right: -4%;
+  right: -6%;
   bottom: 0;
   position: absolute;
   background-color: var(--primary);
@@ -221,9 +221,12 @@ body {
 }
 
 .info-box {
-  padding: 1rem;
+  padding: 1rem 0;
   border-radius: 10px;
   position: relative;
+  align-self: flex-start;
+  display: inline-block;
+  width: fit-content;
 }
 
 .hyperlink {
