--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,10 @@ body {
 
 .page {
   padding-top: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 }
 
 #content {
@@ -252,7 +256,7 @@ a {
 @media (min-width: 768px) {
   .mycard {
     gap: 50px;
-    padding: 20px 50px;
+    padding: 0 50px 25px 50px;
   }
   .mycard.padded {
     gap: 50px;
