home page and stuff

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@
   --nav-height: 80px;
 }
 
+.page-wide-wrapper {
+  position: relative;
+  width: 100%;
+  background-color: var(--secondary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
 #everything {
   min-height: 100vh;
   display: flex;
