--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   --background: #ffffff;
   --primary: #d3ddd3;
   --secondary: #a5cfa5;
-  --accent: #67ac67;
+  --accent: #699069;
+  --accent-dark: #4d7d4d;
   --nav-height: 80px;
 }
 
