--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,22 @@
 :root {
-  --text: #1d1d1d;
+  --text: #333333;
   --background: #ffffff;
   --primary: #d3ddd3;
   --secondary: #a5cfa5;
   --accent: #699069;
   --accent-dark: #4d7d4d;
   --nav-height: 80px;
+}
+
+@font-face {
+  font-family: "mainFont";
+  src: url(assets/fonts/NotoSansHebrew.ttf);
+}
+
+@font-face {
+  font-family: "titleFont";
+  src: url(assets/fonts/AdumaLight.ttf);
+  font-weight: 700;
 }
 
 .page-wide-wrapper {
@@ -39,17 +50,6 @@
   pointer-events: none;
 }
 
-@font-face {
-  font-family: "mainFont";
-  src: url(assets/fonts/NotoSansHebrew.ttf);
-}
-
-@font-face {
-  font-family: "mainFontBold";
-  src: url(assets/fonts/NotoSansHebrew.ttf);
-  font-weight: 700;
-}
-
 html {
   overflow-y: scroll;
   overflow-x: hidden;
@@ -58,8 +58,8 @@ html {
 body {
   margin: 0;
   font-family: mainFont;
-  color: rgb(0, 0, 0);
   font-size: 1.25rem;
+  color: var(--text);
 }
 
 .page {
@@ -109,11 +109,6 @@ body {
   background-color: var(--primary);
 }
 
-.clickable {
-  position: relative;
-  display: inline-block;
-}
-
 .taper-btn {
   position: relative;
   background: none;
@@ -132,7 +127,7 @@ body {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 3px;
+  bottom: 0;
   width: 100%;
   height: 7px;
 
@@ -157,6 +152,8 @@ body {
   opacity: 0;
   transition: background-position 0.6s cubic-bezier(1, 0, 1, 0),
     opacity 0.5s ease;
+
+  z-index: 10;
 }
 
 .clickable:hover::after,
@@ -200,7 +197,7 @@ body {
   justify-content: space-between;
   flex-direction: row;
   width: 100%;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .mycard.flipped {
@@ -238,12 +235,7 @@ body {
 }
 
 .info-box {
-  padding: 1rem 0;
-  border-radius: 10px;
-  position: relative;
-  align-self: flex-start;
-  display: inline-block;
-  width: fit-content;
+  padding: 1rem;
 }
 
 .hyperlink {
