final finishes for minimum viable product

--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,7 @@ body {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--accentDark);
+  background: var(--accent-dark);
 }
 
 /*card*/
