--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -114,8 +114,11 @@
     background-color: rgb(255, 255, 255);
     box-shadow: var(--bs-box-shadow-sm);
   }
+}
 
-  .nav-link {
-    padding-right: 10px;
-  }
+.nav-icon {
+  padding-bottom: 0px;
+  font-size: 2.2rem;
+  vertical-align: center;
+  color: var(--text);
 }
