--- a/src/pages/Teacher.css
+++ b/src/pages/Teacher.css
@@ -148,11 +148,7 @@
 
 @media (max-width: 768px) {
   .timeline-wrapper {
-    margin-right: 10px;
-    margin-top: 10px;
-    width: 40%;
-    min-height: 100px;
-    position: relative;
+    display: none;
   }
 }
 
